@@ -2,6 +2,9 @@
 
 2007-04-03	Konstantin V. Arkhipov
 
+	* meta/: LazyOneToOne relation dropped, you can use
+	'relation="OneToOne" fetch="lazy"' instead.
+
 	* meta/: read-only includes implemented via 'build="false"' option.
 
 	* meta/: --dry-run mode added.
